[gd_scene load_steps=8 format=3 uid="uid://be0pqxrjfpukm"]

[ext_resource type="Script" uid="uid://cc4cp3moh4vdv" path="res://source/editor/editor.gd" id="1_ae8ev"]
[ext_resource type="PackedScene" uid="uid://by865efl4iwy" path="res://source/ui/popups/game_popup.tscn" id="2_isggd"]
[ext_resource type="PackedScene" uid="uid://df5yjnsebj5np" path="res://source/editor/project_load_popup.tscn" id="3_kcuw7"]
[ext_resource type="Script" uid="uid://banactv2tgqrw" path="res://source/editor/editor_world_setup.gd" id="4_l7l2i"]
[ext_resource type="Script" uid="uid://e8mqxhs7tmgj" path="res://source/provinces/visuals/province_select_conditions.gd" id="5_b8gba"]
[ext_resource type="Script" uid="uid://biikbt0rusmly" path="res://source/world/visuals/world_limits_rect2d.gd" id="6_uwkq8"]
[ext_resource type="PackedScene" uid="uid://0uiaabpgiqs" path="res://source/editor/editing_interface.tscn" id="7_um8he"]

[node name="Editor" type="Node"]
script = ExtResource("1_ae8ev")
_popup_scene = ExtResource("2_isggd")
_project_load_popup_scene = ExtResource("3_kcuw7")

[node name="ProvinceSelectConditions" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_b8gba")

[node name="WorldLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="WorldSetup" type="Node" parent="WorldLayer" node_paths=PackedStringArray("_world_container", "_camera_container")]
unique_name_in_owner = true
script = ExtResource("4_l7l2i")
_world_container = NodePath("../WorldContainer")
_camera_container = NodePath("../../CameraContainer")

[node name="WorldContainer" type="Node2D" parent="WorldLayer"]

[node name="WorldLimitsRect2D" type="Node2D" parent="WorldLayer"]
unique_name_in_owner = true
script = ExtResource("6_uwkq8")

[node name="CameraContainer" type="Node2D" parent="."]

[node name="WorldOverlayLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="WorldOverlay" type="Node2D" parent="WorldOverlayLayer"]
unique_name_in_owner = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 3

[node name="TopBarContainer" type="SubViewportContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="UILayer/TopBarContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Control" type="Control" parent="UILayer/TopBarContainer/SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="TopBar" type="Control" parent="UILayer/TopBarContainer/SubViewport/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.075
mouse_filter = 1

[node name="ColorRect" type="ColorRect" parent="UILayer/TopBarContainer/SubViewport/Control/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="MenuBar" type="MenuBar" parent="UILayer/TopBarContainer/SubViewport/Control/TopBar"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.25
anchor_bottom = 0.5
offset_left = 8.0
grow_vertical = 2

[node name="Editor" type="PopupMenu" parent="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar"]
unique_name_in_owner = true
theme_override_constants/v_separation = 12
item_count = 3
item_0/text = "Editor Settings..."
item_0/id = 0
item_1/id = 1
item_1/separator = true
item_2/text = "Quit"
item_2/id = 2

[node name="Project" type="PopupMenu" parent="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar"]
unique_name_in_owner = true
theme_override_constants/v_separation = 12
item_count = 10
item_0/text = "New Project"
item_0/id = 0
item_1/text = "Open..."
item_1/id = 1
item_2/text = "Open Recent"
item_2/id = 2
item_3/id = 3
item_3/separator = true
item_4/text = "Save"
item_4/id = 4
item_5/text = "Save As..."
item_5/id = 5
item_6/id = 6
item_6/separator = true
item_7/text = "Show in File Manager"
item_7/id = 7
item_8/id = 8
item_8/separator = true
item_9/text = "Play"
item_9/id = 9

[node name="Edit" type="PopupMenu" parent="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar"]
unique_name_in_owner = true
theme_override_constants/v_separation = 12
item_count = 7
item_0/text = "World"
item_0/id = 0
item_0/separator = true
item_1/text = "World Limits"
item_1/id = 1
item_2/text = "Background Color"
item_2/id = 2
item_3/text = "Decorations"
item_3/id = 3
item_4/id = 4
item_4/separator = true
item_5/text = "Provinces"
item_5/id = 5
item_6/text = "Countries"
item_6/id = 6

[node name="EditingInterface" parent="UILayer" instance=ExtResource("7_um8he")]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.075
anchor_right = 0.4

[node name="PopupContainer" type="Control" parent="UILayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SaveDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(931, 500)
dialog_hide_on_ok = true
access = 2
use_native_dialog = true

[connection signal="id_pressed" from="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar/Editor" to="." method="_on_editor_tab_id_pressed"]
[connection signal="id_pressed" from="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar/Project" to="." method="_on_project_tab_id_pressed"]
[connection signal="id_pressed" from="UILayer/TopBarContainer/SubViewport/Control/TopBar/MenuBar/Edit" to="." method="_on_edit_tab_id_pressed"]
[connection signal="country_interface_closed" from="UILayer/EditingInterface" to="." method="_on_country_interface_closed"]
[connection signal="country_interface_opened" from="UILayer/EditingInterface" to="." method="_on_country_interface_opened"]
[connection signal="province_change_owner_pressed" from="UILayer/EditingInterface" to="." method="_on_province_change_owner_pressed"]
[connection signal="province_interface_closed" from="UILayer/EditingInterface" to="." method="_on_province_interface_closed"]
[connection signal="province_interface_opened" from="UILayer/EditingInterface" to="." method="_on_province_interface_opened"]
[connection signal="file_selected" from="SaveDialog" to="." method="_on_save_dialog_file_selected"]
